--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2823,7 +2823,7 @@ body.loaded {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-    background: #0f1116;
+    background: #161616;
     z-index: 99999999999999;
 }
 
